--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1 style="color=blue" >Welcome to my web page</h1>
+        <h1 style="color:blue" >Welcome to my web page</h1>
         <h2>Something missing!</h2>
          <h3> Who is this man<h3>
         Hello, world! sssssssssssssssss
